--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.11.0",
     "typescript": "^4.2.4",
     "vue": "^2.6.12",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-uuid": "^2.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.12",
