--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.11.0",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "typescript": "^4.2.4",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
     "vue-uuid": "^2.0.2",
+    "vuex": "^3.6.2",
     "write": "^2.0.0"
   },
   "devDependencies": {
