--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aws-s3": "^2.0.5",
     "axios": "^0.21.1",
     "core-js": "^3.11.0",
     "typescript": "^4.2.4",
