--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@coreui/coreui": "^3.4.0",
+    "@coreui/icons": "^2.0.1",
+    "@coreui/utils": "^1.3.1",
+    "@coreui/vue": "^3.2.11",
+    "@coreui/vue-chartjs": "^1.0.6",
     "aws-s3": "^2.0.5",
     "axios": "^0.21.1",
     "core-js": "^3.11.0",
