--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "aws-s3": "^2.0.5",
     "axios": "^0.21.1",
     "core-js": "^3.11.0",
+    "datatables.net": "^1.10.25",
+    "datatables.net-dt": "^1.1.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "typescript": "^4.2.4",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.12",
+    "vue-google-charts": "^0.3.3",
     "vue-router": "^3.5.1",
     "vue-uuid": "^2.0.2",
     "vuex": "^3.6.2",
